--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../scripts/main.js"></script>
     <script src="../scripts/secrets.js"></script>
+    <script src="../scripts/connector.js"></script>
   </head>
   <body onload='setupApplication()'>
     <!--[if lt IE 7]>
