--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
 
       <div class="card-body">
         <h5 class="card-title">Trigger Notification to All Subscribers</h5>
+        
+        <p class="card-text">
+          <label class="custom-control-label" for="customSwitch2">Select Notification Type:</label>
+          <select class="custom-select" id="notificationTypes">
+          </select>
+        </p>
         <p class="card-text">
           <button type="button" class="btn btn-primary" onclick="broadcastNotification()">Trigger Notification</button>
         </p>
