--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <h5 class="card-title">Trigger Notification to All Subscribers</h5>
         
         <p class="card-text">
-          <label class="custom-control-label" for="customSwitch2">Select Notification Type:</label>
+          <label class="custom-control-label" for="notificationTypes">Select Notification Type:</label>
           <select class="custom-select" id="notificationTypes">
           </select>
         </p>
