--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <script src="../scripts/secrets.js"></script>
     <script src="../scripts/connector.js"></script>
     <script src="../scripts/handlers.js"></script>
+    <style>
+      *{
+        scroll-behavior: smooth;
+      }
+    </style>
   </head>
   <body onload='setupApplication(); selectTab("intro_tab");'>
     <nav class="navbar sticky-top navbar-dark bg-primary">
