--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
     <script src="../scripts/secrets.js"></script>
     <script src="../scripts/connector.js"></script>
     <script src="../scripts/handlers.js"></script>
-    <style>
-      *{
-        scroll-behavior: smooth;
-      }
-    </style>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body onload='setupApplication(); selectTab("intro_tab");'>
     <nav class="navbar sticky-top navbar-dark bg-primary">
